--- a/src/main/resources/templates/user/usercollect.html
+++ b/src/main/resources/templates/user/usercollect.html
@@ -168,7 +168,7 @@
                     <td th:text="${collect.getArticleid()}"></td>
                     <td th:text="${collect.getArticleNameImpl()}"></td>
                     <td th:text="${collect.getCollectTimeImpl()}"></td>
-                    <td th:text="${collect.getCollecttype()}"></td>
+                    <td th:text="${collect.getCollectFolderNameImpl()}"></td>
                     <td>
                         <button class="btn btn-info disabled">
                             <span class="bi-gear">操作</span>
