--- a/src/main/resources/templates/admin/board/adminnewboard.html
+++ b/src/main/resources/templates/admin/board/adminnewboard.html
@@ -98,7 +98,8 @@
             </div>
             <h3>记录</h3>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='http://localhost:8080/adm/tologinrecords'">
                     <span class="bi-person-lines-fill"></span>   登录记录</button>
                 <button type="button" class="list-group-item list-group-item-action">
                     <span class="bi-currency-exchange"></span>   财产变更记录</button>
