--- a/src/main/resources/templates/user/utheme/usertheme.html
+++ b/src/main/resources/templates/user/utheme/usertheme.html
@@ -1,10 +1,211 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>小山屋论坛-用户管理</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+    <!-- 新 Bootstrap5 核心 CSS 文件 -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!--  popper.min.js 用于弹窗、提示、下拉菜单 -->
+    <!--<script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>-->
+
+    <!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
+    <script src="js/bootstrap.bundle.min.js"></script>
+
+    <!--  vue.js  -->
+    <script src="js/vue.js"></script>
+
+    <!--  bootstrap5 图标库-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
+    <!--  备用cdn  -->
+
+    <!-- 新 Bootstrap5 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
+
+    <!--  popper.min.js 用于弹窗、提示、下拉菜单 -->
+    <script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
+
+    <!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
+
+    <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+    <script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>
+
+    <!--  和风天气  -->
+    <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
+
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/echarts/4.3.0/echarts.min.js"></script>
+
+    <style>
+        #mainpart{
+            margin-top: 20px;
+        }
+
+    </style>
+
 </head>
 <body>
+<div class="modal fade" id="changeThemeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="collectModalLabel">修改主题信息</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <h5>当前信息</h5>
+                <br>
+                <h5>新信息</h5>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary">修改</button>
+            </div>
+        </div>
+    </div>
+</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="/ind/userindex">
+            小山屋论坛</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"><span class="bi-balloon-heart"></span>
+                        漂流瓶</a>
+                </li>
+            </ul>
 
+        </div>
+        <div class="nav-item dropdown d-flex">
+            <a class="nav-link link-light dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+               role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${user.getUsername()}">
+                用户
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="/ind/logout"><span class="bi-power"></span> 退出登录</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container" id="mainpart">
+
+    <nav aria-label="breadcrumb" style="--bs-breadcrumb-divider: '>';">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">小山屋论坛</a></li>
+            <li class="breadcrumb-item active" aria-current="page">用户中心</li>
+        </ol>
+    </nav>
+
+    <div th:style="'background-image: url('+${headimgbg}+');background-repeat:no-repeat;background-size:100%;'">
+        <div class="row">
+            <div class="col-sm-2">
+                <img th:src="@{${headimg}}" class="img-fluid img-thumbnail">
+            </div>
+            <div class="col-sm-10">
+                <table class="table table-borderless">
+                    <tr>
+                        <td>
+                            <span class="bi-person"></span>
+                        </td>
+                        <td th:text="${user.getUsername()}"></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="bi-at"></span>
+                        </td>
+                        <td th:text="${user.getUseremail()}"></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span class="bi-chat-left"></span>
+                        </td>
+                        <td th:text="${user.getUserstatement()}"></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-3">
+            <h3>我的</h3>
+            <div class="list-group">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/tousercenter'">
+                    <span class="bi-journal-check"></span> 我的数据</button>
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/userallarticle'">
+                    <span class="bi-card-text"></span> 我的帖子</button>
+                <button type="button" class="list-group-item list-group-item-action active"
+                        onclick="window.location.href='/user/tousertheme'">
+                    <span class="bi-back"></span> 我的主题</button>
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/usercollects'">
+                    <span class="bi-star"></span> 我的收藏</button>
+            </div>
+            <h3>安全</h3>
+            <div class="list-group">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/userinfo'">
+                    <span class="bi-clipboard-data"></span> 我的信息</button>
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/tochangepwd'">
+                    <span class="bi-key"></span> 修改密码</button>
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/tochangeemail'">
+                    <span class="bi-at"></span> 修改邮箱</button>
+            </div>
+        </div>
+        <div class="col-9">
+            <h1><span class="bi-back"></span> 我的主题</h1>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active">全部</a>
+                </li>
+            </ul>
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th>id</th>
+                    <th>名称</th>
+                    <th>创建时间</th>
+                    <th>帖子数量</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="theme,iterStat : ${themes}">
+                    <td th:text="${theme.getThemeid()}"></td>
+                    <td th:text="${theme.getThemename()}"></td>
+                    <td th:text="${theme.getThemetime()}"></td>
+                    <td th:text="${theme.getThemecount()}"></td>
+                    <td>
+                        <button class="btn btn-primary">
+                            修改
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <footer class="bd-footer p-3 p-md-5 mt-5 bg-light text-center text-sm-start">
+        <div class="container">
+            <ul class="bd-footer-links ps-0 mb-3">
+                <li class="d-inline-block" ><a href="https://github.com/bluebonnet27/xiaoshanwu">GitHub</a></li>
+            </ul>
+            <p class="mb-0">小山屋论坛 Copyright© 2022 All Rights Reserved. </p>
+            <p class="mb-0">当前版本 v0.1。</p>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
