（用户）主题管理初步

--- a/src/main/resources/templates/admin/uuser/userdetailcon.html
+++ b/src/main/resources/templates/admin/uuser/userdetailcon.html
@@ -169,6 +169,11 @@
                         <div class="col-sm-6">
                             <input  class="form-control" id="usermoneylab" th:value="${user.getUsermoney()}" disabled>
                         </div>
+                        <div class="col-sm-2">
+                            <a class="btn btn-info">
+                                <span class="bi-trash-fill"></span> 修改财产
+                            </a>
+                        </div>
                     </div>
 
                 </fieldset>
