--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -95,7 +95,7 @@
                 <li><h6 class="dropdown-header">我的</h6></li>
                 <li><a class="dropdown-item" href="/user/tousercenter"><span class="bi-people"></span> 个人中心</a></li>
                 <li><a class="dropdown-item" href="/user/userallarticle"><span class="bi-card-text"></span> 我的帖子</a></li>
-                <li><a class="dropdown-item" href="#"><span class="bi-back"></span> 我的主题</a></li>
+                <li><a class="dropdown-item" href="/user/tousertheme"><span class="bi-back"></span> 我的主题</a></li>
                 <li><a class="dropdown-item" href="/user/usercollects"><span class="bi-star"></span> 我的收藏</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><h6 class="dropdown-header">安全</h6></li>
